<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <artifactId>au.blindmot.mtomman</artifactId>
  <name>MTM Manufacturing</name>
  <description>MTM Manufacturing swimming pool plugin</description>
  <parent>
		<groupId>org.idempiere</groupId>
		<artifactId>org.idempiere.parent</artifactId>
		<version>8.2.0-SNAPSHOT</version>
		<relativePath>../../idempiere/org.idempiere.parent/pom.xml</relativePath>
	</parent>
	<packaging>eclipse-plugin</packaging>
  <dependencies>
 
  </dependencies>
  <build>
  <sourceDirectory>src</sourceDirectory>
  <resources>
  	 	<resource>
            <directory>src/main/resources</directory>
        </resource>
         <resource>
        <directory>lib</directory>
        <targetPath>lib</targetPath>
    </resource>
    <resource>
        <directory>tokens</directory>
        <targetPath>tokens</targetPath>
    </resource>
    <resource>
        <directory>OSGI-INF</directory>
        <targetPath>OSGI-INF</targetPath>
    </resource>
      <resource>
        <directory>resources</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
          <release>11</release>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-resources-plugin</artifactId>
        <version>3.1.0</version>
        <configuration>
          <release>11</release>
        </configuration>
      </plugin>
       <plugin>
    <groupId>org.codehaus.mojo</groupId>
    <artifactId>build-helper-maven-plugin</artifactId>
    <version>1.3</version>
    <executions>
      <execution>
        <id>attach-artifacts</id>
        <phase>package</phase>
        <goals>
          <goal>attach-artifact</goal>
        </goals>
        <configuration>
          <artifacts>
            <artifact>
              <file>targetFilename.target</file>
              <type>target</type>
        <classifier>targetFilename</classifier>
            </artifact>
          </artifacts>
        </configuration>
      </execution>
    </executions>
  </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>3.1.1</version>
        <executions>
          <execution>
            <id>copy-dependencies</id>
            <phase>package</phase>
            <goals>
              <goal>copy-dependencies</goal>
            </goals>
            <configuration>
              <outputDirectory>${project.build.directory}/lib</outputDirectory>
            </configuration>
          </execution>
        </executions>
      </plugin>
       <plugin>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.2.0</version>
        <configuration>
          <release>11</release>
        </configuration>
      </plugin>
       <plugin>
        <artifactId>maven-clean-plugin</artifactId>
        <version>2.5</version>
        <configuration>
          <filesets>
            <fileset>
              <directory>${basedir}</directory>
              <includes>
                <include>*.jar</include>
              </includes>
              <followSymlinks>false</followSymlinks>
             </fileset>
           </filesets>
         </configuration>
       </plugin>
       <plugin>
       	<groupId>org.eclipse.tycho</groupId>
       	<artifactId>tycho-maven-plugin</artifactId>
       	<version>${tycho-version}</version>
       </plugin>
    </plugins>
   </build>
  <properties>
  	<tycho-version>1.5.0</tycho-version>
  </properties>
  <groupId>au.blindmot.mtomman</groupId>
  <version>8.2.1</version>
</project>